[TECH TASK]: Replace converters with mappers